# autosource

./: .gitignore  LICENSE  README.md  SPEC.md  app.py  autosource.md  extract.py  fetch_reports.py  links.md  program.md  pyproject.toml  requirements.txt  synthesize.py  validate.py
agentdataset/core/: discovery.py  extractor.py  orchestrator.py  synthesizer.py  validator.py
artifacts/: catalog.json  selector.md
results/: analysis.ipynb  data.csv  parameters.json
source_library/: selector.md
tests/: test_extractor.py  test_orchestrator.py
