[project]
name = "autosource"
version = "0.1.0"
description = "Synthetic Data Factory for Africa - Transform PDF reports into high-fidelity synthetic datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.0",
    "markdown>=3.7.0",
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "PyMuPDF>=1.25.0",
    "requests>=2.32.0",
    "tqdm>=4.67.0",
]

[build-backend]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []