[project]
name = "agentdataset"
version = "0.1.0"
description = "AgentDataset - Autonomous Synthetic Data Factory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.0",
    "markdown>=3.7.0",
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "PyMuPDF>=1.25.0",
    "requests>=2.32.0",
    "tqdm>=4.67.0",
    "duckduckgo-search>=8.1.1",
    "trafilatura>=2.0.0",
    "litellm>=1.83.14",
    "streamlit>=1.57.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[build-backend]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentdataset"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = []
